# latent_design_labs

./: .coverage 2  .gitignore  README.md  SETUP.md  hyperparameter_config.json  install_dev.py  main.py  my_test.py  pyproject.toml  requirements.txt
cli/: app.py
cli/cfgs/: cmds_other.txt  cmds_other_big.txt  cmds_paper.txt  fof.json  fof_others_e1.json  fof_others_e2.json  fof_others_e3.json  fof_others_e4.json  fof_paper.json  fof_sweep.json
cli/cfgs/old_runs/: sof.json  sos.json
cli/results/: results.jsonl
runs/20250823-010235_dump/: result.json  train_set.csv  val_set.csv
runs/20250823-010256_dump/: result.json  train_set.csv  val_set.csv
src/: nbdo_cli.py  test.ipynb
src/bases/: __init__.py  base.py  bspline.py  fourier.py  polynomial.py
src/criteria/: __init__.py  a_optimality.py  base_psi.py  d_optimality.py  g_optimality.py  i_optimality.py
src/diagnostics/: __init__.py  core.py  sampling.py
src/inner_products/: __init__.py  jmatrix.py  penalty.py
src/latent_design/: __init__.py
src/latent_design/bases/: __init__.py  bspline.py  fourier.py  polynomial.py
src/latent_design/cli/: __init__.py  app.py
src/latent_design/cli/cfgs/: cmds_other.txt  cmds_other_big.txt  cmds_paper.txt  fof.json  fof_others_e1.json  fof_others_e2.json  fof_others_e3.json  fof_others_e4.json  fof_paper.json
src/latent_design/cli/cfgs/old_runs/: fof_old.json  sof.json  sos.json
src/latent_design/criteria/: __init__.py  a_optimality.py  base_psi.py  d_optimality.py  g_optimality.py  i_optimality.py
src/latent_design/diagnostics/: __init__.py
src/latent_design/inner_products/: __init__.py  jmatrix.py  penalty.py
src/latent_design/models/: __init__.py  base_model.py  fof.py  sof.py  sos.py
src/latent_design/optimizers/: __init__.py  nbdo.py
src/latent_design/utils/: __init__.py  backend.py  efficiency.py  tf_env.py
src/models/: __init__.py  base_model.py  fof.py  sof.py  sos.py
src/optimalities/: __init__.py  base_psi.py  psi_a.py  psi_d.py  psi_g.py  psi_i.py
src/optimizers/: base_optimizer.py  nbdo.py
src/utilities/: efficiency.py
src/utils/: __init__.py
tests/: __init__.py  test_imports.py
