[project]
name = "latent-design-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "scikit-learn>=1.6.1",
    "scikit-optimize>=0.10.2",
    "scipy>=1.13.1",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
]
