[project]
name = "latent-design-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "rich>=14.1.0",
    "scikit-learn>=1.6.1",
    "scikit-optimize>=0.10.2",
    "scipy>=1.13.1",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
    "typer>=0.16.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
nbdo = "nbdo_cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["nbdo_cli"]  # was ["cli"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["models*", "optimizers*"]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
