[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latent-design"
version = "0.1.0"
description = "A Python package for experimental design and optimization using various criteria and models"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "tedoiler", email = "ladas.thodoris@gmail.com"}
]
keywords = ["experimental-design", "optimization", "statistics", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "rich>=14.1.0",
    "scikit-learn>=1.6.1",
    "scikit-optimize>=0.10.2",
    "scipy>=1.13.1",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
    "typer>=0.16.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/latent_design_labs"
Documentation = "https://latent-design-labs.readthedocs.io/"
Repository = "https://github.com/yourusername/latent_design_labs"
Issues = "https://github.com/yourusername/latent_design_labs/issues"

[tool.setuptools.packages.find]
where = ["src", "."]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml"]

[project.scripts]
nbdo = "cli.app:app"